--- a/bootstrap/webfiles/pom.xml
+++ b/bootstrap/webfiles/pom.xml
@@ -22,6 +22,22 @@
       <artifactId>hippo-essentials-components-hst</artifactId>
       <scope>provided</scope>
     </dependency>
+
+
+    <dependency>
+      <groupId>org.onehippo.cms7.hst</groupId>
+      <artifactId>hst-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.onehippo.cms7.hst</groupId>
+      <artifactId>hst-client</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
