--- a/cms/pom.xml
+++ b/cms/pom.xml
@@ -13,6 +13,12 @@
   <description>My Hippo Project CMS</description>
   <dependencies>
     <dependency>
+      <groupId>org.apache.wicket</groupId>
+      <artifactId>wicket</artifactId>
+      <version>1.4.17</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.onehippo.cms7.hst.dependencies</groupId>
       <artifactId>hst-repository-dependencies</artifactId>
       <type>pom</type>
