--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,15 @@
     </repository>
   </repositories>
 
+  <dependencies>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.34</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -147,13 +156,6 @@
         <artifactId>easymock</artifactId>
         <version>${easymock.version}</version>
         <scope>test</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>5.1.34</version>
-        <scope>provided</scope>
       </dependency>
 
     </dependencies>
@@ -297,12 +299,23 @@
                 </deployable>
               </deployables>
               <container>
-                <systemProperties>
+                <dependencies>
+                  <dependency>
+                    <groupId>mysql</groupId>
+                    <artifactId>mysql-connector-java</artifactId>
+                    <classpath>extra</classpath>
+                  </dependency>
+                </dependencies>
+                <!--<systemProperties>
                   <log4j.configuration>file:${project.basedir}/conf/log4j-dev.xml</log4j.configuration>
                   <rebel.log4j-plugin>true</rebel.log4j-plugin>
-                  <!-- enables auto export and web files watch: -->
+                  &lt;!&ndash; enables auto export and web files watch: &ndash;&gt;
                   <project.basedir>${project.basedir}</project.basedir>
                   <send.usage.statistics.to.hippo>true</send.usage.statistics.to.hippo>
+                  <repo.config>file:${project.basedir}/conf/repository.xml</repo.config>
+                </systemProperties>-->
+                <systemProperties>
+                  <repo.config>file:${project.basedir}/conf/repository.xml</repo.config>
                 </systemProperties>
               </container>
             </configuration>
